--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,12 @@ body {
   background-color: black;
   font-family: sans-serif;
 }
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(to right bottom, #7c3aed, #3b82f6);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 0px;
+}
